# salad-transcription-mcp

./: .gitignore  README.md
salad-transcription-mcp/: README.md  pyproject.toml
salad-transcription-mcp/src/salad_transcription_mcp/: __init__.py  __main__.py  config.py  server.py  utils.py
salad-transcription-mcp/src/salad_transcription_mcp/tools/: get_job.py  transcribe.py  transcribe_lite.py
