[project]
name = "salad-transcription-mcp"
version = "0.1.0"
description = "MCP server wrapping the Salad Transcription API"
readme = "README.md"
authors = [
    { name = "gorkii", email = "maksim.gorkii@salad.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "salad-cloud-transcription-sdk>=0.1.0",
]

[project.scripts]
salad-transcription-mcp = "salad_transcription_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
